--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="https://i.postimg.cc/wvbw51vg/lips.png"
+      href="https://i.postimg.cc/SNqL56fQ/1-removebg-preview.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GLOW - Discover Your Natural Beauty</title>
